# -

./: .env.example  .gitignore  CHANGELOG_v1.1.md  CHANGELOG_v1.2.md  CHANGELOG_v1.3.md  CHANGELOG_v1.4.md  CHANGELOG_v1.5.md  CHANGELOG_v1.6.md  CHANGELOG_v1.7.md  CHANGELOG_v1.8.md  CHANGELOG_v1.9.md  GIF Maker Pro.spec  README.md  TODO_NEXT.md  _test_ass.py  _test_batch.py  _test_bridge.py  _test_engine.py  _test_features.py  _test_grid.py  _test_gui.py  _test_mp4.py  _test_planner.py  _test_planner_ui.py  _test_quality.py  _test_shorts.py  _test_shorts_ui.py  _test_tts.py  _test_video_ui.py  _test_watermark.py  about_dialog.py  background.js  build.bat  config.py  content.js  editor.py  eslint.config.mjs  image_merger.py  invoice.html  license_dialog.py  (+28 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 83e7a02e027a_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: activations.py  auth.py  deps.py  licenses.py  products.py  stats.py  users.py  verify.py
backend/app/core/: errors.py  hmac_verify.py  key_generator.py  security.py
backend/app/models/: __init__.py  activation.py  audit_log.py  base.py  license.py  product.py  user.py
backend/app/schemas/: activation.py  audit.py  auth.py  common.py  license.py  product.py  stats.py  user.py  verify.py
backend/app/scripts/: seed_admin.py
backend/app/services/: audit.py  (+3 more)
client/: README.md  pyproject.toml
client/centumhi_license/: __init__.py  cache.py  client.py  errors.py  hwid.py  models.py
client/examples/: usage.py
client/tests/: test_cache.py  test_client.py  test_hwid.py
(+225 files in other folders)
