[project]
name = "centumhi-license-hub-backend"
version = "0.1.0"
description = "Centumhi License Hub - unified license issuance & verification API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.200",
    "uvicorn[standard]>=0.30",
    "SQLAlchemy>=2.0,<2.1",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "APScheduler>=3.10,<4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# PostgreSQL driver for production (DATABASE_URL=postgresql+psycopg://...)
pg = [
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
